Criada a logica da tela para testes