@@ -10,6 +10,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -131,7 +132,7 @@ public class InstallerService {
         logger.info("Iniciando download de: {}", fileUrl);
         logger.info("Salvando arquivo em: {}", destination.getAbsolutePath());
 
-        URL url = new URL(fileUrl);
+        URL url = new URI(fileUrl).toURL();
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         int fileSize = connection.getContentLength();
 
@@ -170,8 +171,8 @@ public class InstallerService {
         int filledLength = (int) (barLength * progress / 100.0);
 
         StringBuilder bar = new StringBuilder("[");
-        for (int i = 0; i < filledLength; i++) bar.append("=");
-        for (int i = filledLength; i < barLength; i++) bar.append(" ");
+        bar.append("=".repeat(Math.max(0, filledLength)));
+        bar.append(" ".repeat(Math.max(0, barLength - filledLength)));
         bar.append("]");
 
         System.out.print("\r" + bar + " " + progress + "%");
@@ -189,7 +190,10 @@ public class InstallerService {
         if (natives.exists()) {
             logger.info("Descompactando arquivo: {}", natives.getAbsolutePath());
             unzipper.unzip(natives.toString(), basePath + File.separator + "downloads" + File.separator + "natives");
-            natives.delete();
+            if (natives.delete()) {
+                logger.info("Arquivo Deletado com Sucesso: {}", natives.getAbsolutePath());
+            }
+
         } else {
             logger.warn("Arquivo para descompactar não encontrado: {}", natives.getAbsolutePath());
         }
@@ -197,7 +201,10 @@ public class InstallerService {
         if (libraries.exists()) {
             logger.info("Descompactando arquivo: {}", libraries.getAbsolutePath());
             unzipper.unzip(libraries.toString(), basePath + File.separator + "downloads" + File.separator + "libraries");
-            libraries.delete();
+
+            if (libraries.delete()) {
+                logger.info("Arquivo Deletado com Sucesso: {}", libraries.getAbsolutePath());
+            }
         } else {
             logger.warn("Arquivo para descompactar não encontrado: {}", libraries.getAbsolutePath());
         }
